--- a/SVGtraining.html
+++ b/SVGtraining.html
@@ -24,33 +24,43 @@
     <section id="figures">
       <h1>SVG Examples</h1>
 
+      <!-- Pikkumusta pallo with css mousover -->
       <svg height="200" width="200">
       <circle id="circle1" cx="50" cy="50" r="40" fill="#000" />
     </svg>
 
-    <img src="SVGtraining.svg" alt="">
+    <img src="SVGtraining.svg" alt="" >
 
     <img src="SVGChessBoard.svg" alt="">
-    <svg width="160" height="160" xmlns="http://www.w3.org/2000/svg">>
-      <rect width="80" height="80" style="fill:#000;"/>
-      <rect x="80" y="80" width="80" height="80" style="fill:#fff;"/>
+    <svg width="160" height="160" xmlns="http://www.w3.org/2000/svg">
+      <rect width="80" height="80" style="fill:#000"/>
+      <rect x="80" y="80" width="80" height="80" style="fill:#fff" />
     </svg>
 
       <div class="space">
       </div>
 
+
       <img src="SVGtraining.svg" alt="">
 
+      <!-- Big ball with mouseover javascript -->
       <svg height="200" width="200" xmlns="http://www.w3.org/2000/svg">
-      <circle cx="100" cy="100" fill="hotpink" r="95" stroke="steelblue" stroke-width="10" />
+      <circle cx="100" cy="100" fill="hotpink" r="95"
+      stroke="steelblue" stroke-width="10" onmouseover="this.setAttribute('fill','grey')" onmouseout="this.setAttribute('fill', 'hotpink')"/>
+    </svg>
+
+
+      <svg height="200" width="200" xmlns="http://www.w3.org/2000/svg">
+      <rect fill="hotpink" height="180" stroke="steelblue" stroke-width="10" width="180" x="10" y="10"
+      onmouseover="this.setAttribute('fill','grey')"
+      onmouseout="this.setAttribute('fill', 'hotpink')"/>
     </svg>
 
       <svg height="200" width="200" xmlns="http://www.w3.org/2000/svg">
-      <rect fill="hotpink" height="180" stroke="steelblue" stroke-width="10" width="180" x="10" y="10" />
-    </svg>
-
-      <svg height="200" width="200" xmlns="http://www.w3.org/2000/svg">
-      <polygon fill="hotpink" points="190,190 100,10 10,190" stroke="steelblue" stroke-width="10" />
+      <polygon fill="hotpink" points="190,190 100,10 10,190"
+      stroke="steelblue" stroke-width="10"
+      onmouseover="this.setAttribute('points','0,0 50,190 190,10')"
+      onmouseout="this.setAttribute('points','190,190 100,10 10,190')"/>
     </svg>
 
       <svg height="200" width="200" xmlns="http://www.w3.org/2000/svg">
@@ -61,8 +71,10 @@
       <text fill="#000" font-family="sans-serif" font-size="1em" x="1em" y="9em">Lite text i svg</text>
     </svg>
 
+    <!-- Last ball with mousover -->
       <svg xmlns="http://www.w3.org/2000/svg">
-      <circle cx="5em" cy="5em" r="4em" class="shape"></circle>
+      <circle cx="5em" cy="5em" r="4em" class="shape" onmouseover="this.setAttribute('r','2em')"
+      onmouseout="this.setAttribute('r','4em')"/>
     </svg>
 
     </section>
